Fix T77171: File selector doesn't tag preferences to be saved